--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       <nav class="blue-grey darken-4">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            <ul class="left hide-on-med-and-down">  
-              <li><a href="#home">Home</a></li>
+            <a href="#" class="brand-logo">RETRO_LIGHT</a>
+            <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i>i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">  
+              <li><a href="#home"></a></li>
               <li><a href="#video">Video</a></li>
               <li><a href="#keterangan">Keterangan</a></li>
               <li><a href="#testimoni">Testimoni</a></li>
