--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <img src="img/Plane_1.jpg" />
           <!-- random image -->
           <div class="caption center-align">
-            <h2>Selamat Datang Di<br><br><br><br>Retro Light Project!</h2>
+            <h2><br>Selamat Datang</h2>
             <h5 class="light grey-text text-lighten-3"></h5>
           </div>
         </li> 
@@ -268,9 +268,9 @@
       const slider = document.querySelectorAll('.slider');
       M.Slider.init(slider, {
         indicators: false,
-        height: 900,
-        transition: 600,
-        interval: 4000,
+        height: 550,
+        transition: 500,
+        interval: 3000,
       });
 
       const parallax = document.querySelectorAll('.parallax');
