--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <!-- my css-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -28,7 +30,7 @@
         <div class="container">
           <div class="nav-wrapper">
             <a href="#" class="brand-logo">RETRO_LIGHT</a>
-            <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i>i></a>
+            <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">  
               <li><a href="#home"></a></li>
               <li><a href="#video">Video</a></li>
@@ -222,7 +224,7 @@
           <div class="col m7 s12">
             <form name="submit-to-google-shee">
                 <div class="card-panel">
-                    <h5>This Form</h5>
+                    <h5>This Form<br><br></h5>
                     <div class="input-field">
                       <i class="material-icons prefix name">account_circle</i>
                         <input type="text" name="name" id="name" required class="validate">
