--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     <!-- contact us -->
     <section id="contact" class="contact grey darken-3 scrollspy">
-      <form action="https://formspree.io/f/xqkwydjp" method="POST"></form>>
+      <form action="mail.php" method="POST" enctype="text/plain"></form>>
       <div class="container">
         <h3 class="light grey-text text-grey lighten-5 center white-text"><b>Contact Us</h3>
         <div class="row">
