--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </ul>
           </div>
           <div class="col m7 s12">
-            <form name="submit-to-google-shee">
+            <form action="contact.php" method="POST">
                 <div class="card-panel">
                     <h5>This Form<br><br></h5>
                     <div class="input-field">
@@ -285,7 +285,7 @@
       M.ScrollSpy.init(scroll,{
           scrollOffset: 50
       });
-      
+
     </script>
   </body>
 </html>
