--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     <!-- contact us -->
     <section id="contact" class="contact grey darken-3 scrollspy">
-      <form action="mail.php" method="POST">
+      <form action="" method="">
       <div class="container">
         <h3 class="light grey-text text-grey lighten-5 center white-text"><b>Contact Us</h3>
         <div class="row">
@@ -222,7 +222,7 @@
             </ul>
           </div>
           <div class="col m7 s12">
-            <form action="mail.php" method="POST">
+            <form action="" method="">
                 <div class="card-panel">
                     <h5>This Form<br><br></h5>
                     <div class="input-field">
